--- a/css/fixUI.css
+++ b/css/fixUI.css
@@ -5,7 +5,7 @@ input#SearchBox{
 
 
 /* scalebar position */
-[id^="OpenLayers_Control_ScaleLine"]{
+div#OpenLayers_Control_ScaleLine_31{
     left: auto !important;
     top: auto !important;
     right: 10px !important;
