Disable horizontal dragging. Comment out small icon sizes.
Small icons not required as change of basemap from bing to mapnik
allowed extra zoom level

--- a/css/fixUI.css
+++ b/css/fixUI.css
@@ -12,10 +12,12 @@ input#SearchBox{
 }
 
 /* Prevent large icons in mobile view */
+/*
 [id^="OpenLayers_Geometry_Point"]{
     width: 16px !important;
     height: 16px !important;
 }
+*/
 
 /* hide cursor coordinates - temp fix */
 div#OpenLayers_Control_MousePosition_69{
