Position legend div and find postcode div
Move legend up a bit
Move find post code down to anchor from bottom

--- a/css/fixUI.css
+++ b/css/fixUI.css
@@ -29,5 +29,13 @@ div#LegendDiv {
     font-size: larger !important;
     height: 225px !important;
     top: auto !important;
-    bottom: 100px !important;
+    bottom: 123px !important;
+}
+
+/* Find postcode */
+div#SearchDiv {
+    font-size: large !important;
+    height: 100px !important;
+    bottom: 123px !important;
+    top: auto !important;
 }
