--- a/css/mod2.css
+++ b/css/mod2.css
@@ -49,3 +49,6 @@ div#myToolbar > a{
 a#toggleLegend {
     background-image: url('https://cloud.githubusercontent.com/assets/16360753/11973715/f7928844-a954-11e5-976f-d6c040e6e749.png');
 }
+a#showFilter {
+    background-image: url('https://cloud.githubusercontent.com/assets/16360753/11974694/60a39040-a95e-11e5-8720-389f176ad163.png');
+}
