--- a/css/mod2.css
+++ b/css/mod2.css
@@ -1,3 +1,10 @@
+/* Prevent margins on page - NEED TO TEST ON IPHONE */
+body {
+    position: fixed !important;
+    width: 100% !important;
+    height: 100% !important;
+}
+
 /* postion scalebar at top-right of map */
 [id^="OpenLayers_Control_ScaleLine_"] {
     top: 10px !important;
@@ -52,11 +59,4 @@ a#showFilter {
 
 a#toggleLegend {
     background-image: url('https://cloud.githubusercontent.com/assets/16360753/11973715/f7928844-a954-11e5-976f-d6c040e6e749.png');
-}
-
-/* TEST BODY FIXED TO SEE WHAT HAPPENS WITH SCROLLING */
-body {
-    position: fixed !important;
-    width: 100% !important;
-    height: 100% !important;
 }
