Do not hide legenddiv
trying to hide legend div with cadline's togglelegend function instead

--- a/css/mod2.css
+++ b/css/mod2.css
@@ -25,7 +25,7 @@ div#MapToolsDiv {
 }
 /* hides legend div */
 div#LegendDiv {
-    display: none;
+    /*display: none;*/
 }
 /* hide all openlayer panning zooming buttons */
 [id^="OpenLayers_Control_PanZoom_16_"] {
