--- a/css/mod2.css
+++ b/css/mod2.css
@@ -43,6 +43,7 @@ div#toolbarContainer {
     background-color: #fff;
     text-align: center;
     width: 100%;
+    z-index: 9999;
 }
 /* toolbar buttons */
 div#myToolbar > a{
