--- a/css/mod2.css
+++ b/css/mod2.css
@@ -33,10 +33,7 @@ div#SearchDiv {
 div#MapToolsDiv {
     display: none;
 }
-/* hides legend div */
-div#LegendDiv {
-    /*display: none;*/
-}
+
 /* hide all openlayer panning zooming buttons */
 [id^="OpenLayers_Control_PanZoom_16_"] {
     display: none !important;
@@ -55,6 +52,7 @@ div#DialogContentDiv>div>h3:nth-child(6) {
 /* hide broken clusters filter options -- spaces iflter works on both layers */
 div#DialogContentDiv>div>table:nth-child(7) {
    display: none !important;
+   overflow: hidden !important;
 }
 div#DialogDiv {
    top: auto !important;
@@ -101,10 +99,11 @@ div#LegendDiv {
    height: auto !important;
    top: auto !important;
    bottom: 42px !important;
-   border: 0px !important;
    left: 0px !important;
-   border-width:2px 2px 0px 0px;
+   border: 1px solid #000 !important;
+   width: auto !important;
 }
+/* 100% legend child table - NOT SURE IF THIS IS REQUIRED */
 div#LegendDiv > table {
    width: 100%;
 }
