hide close button in filterdiv
filter div has ok/cancel/reset buttons that are sufficient
Added button to legend to match.

buttons are also more mobile friendly

--- a/css/mod2.css
+++ b/css/mod2.css
@@ -70,6 +70,7 @@ div#DialogCloseDiv {
   width: 24px !important;
   height: 24px !important;
   cursor: pointer;
+  display: none; /* hide close button as ok/cancel/reset buttons are sufficient */
 }
 
 /* TOOLBAR STYLES */
